# mark

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  main.py
src/: config.json  life.py  main.py
src/fonts/: 5x7.bdf
src/rs/: Cargo.toml
src/rs/src/: config.rs  countdown.rs  index.html  life.rs  main.rs  presence.rs  server.rs  time.rs  weather.rs
