[package]
name = "rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rpi-led-matrix = { version = "0.4", features = ["embeddedgraphics"] }
chrono = "0.4"
ndarray = "0.13"
ndarray-rand = "0.11"
queues = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = { version = "2.4.0", features = ["json"] }
scraper = "0.12.0"
image = { version = "0.24.1", features = ["png"], default-features = false }
embedded-graphics = "0.7.1"
itertools = "0.10.3"

[features]
